--- a/src/styles/components/Position/position.scss
+++ b/src/styles/components/Position/position.scss
@@ -36,6 +36,10 @@
 
     &__box {
         padding: toRem(20px);
+        display: flex;
+        flex-direction: column;
+        text-align: justify;
+        align-items: center;
         color: $hdl-color;
 
         @media only screen and (max-width: toRem(770px)) {
