--- a/src/styles/components/Contact/contact.scss
+++ b/src/styles/components/Contact/contact.scss
@@ -1,16 +1,18 @@
 .container__contact {
     height: 100vh;
 
-    @media only screen and (max-width: toRem(770px)) {
-        height: 100%;
-    }
+    // @media only screen and (max-width: toRem(770px)) {
+    //     height: 100%;
+    // }
 }
 
 .contact {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: $bg-light-color;
 
     &__hdl {
@@ -30,8 +32,8 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        margin-top: toRem(100px);
-        margin-bottom: toRem(100px);
+        // margin-top: toRem(100px);
+        // margin-bottom: toRem(100px);
         align-items: center;
 
     }
