--- a/src/styles/components/Position/position.scss
+++ b/src/styles/components/Position/position.scss
@@ -1,9 +1,9 @@
 .container__positions {
     height: 100vh;
 
-    @media only screen and (max-width: toRem(770px)) {
-        height: 100%;
-    }
+    // @media only screen and (max-width: toRem(770px)) {
+    //     height: 100%;
+    // }
 }
 
 .positions {
@@ -15,7 +15,7 @@
     height: 100vh;
     background-color: $bg-light-color;
     margin: 0 auto;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
 
     @media only screen and (max-width: toRem(770px)) {
         height: 100%;
@@ -42,9 +42,9 @@
         align-items: center;
         color: $hdl-color;
 
-        @media only screen and (max-width: toRem(770px)) {
-            padding: toRem(200px) toRem(20px);
-        }
+        // @media only screen and (max-width: toRem(770px)) {
+        //     padding: toRem(200px) toRem(20px);
+        // }
     }
 
     &__link {
