--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -20,7 +20,7 @@
         gap: toRem(20px);
         font-size: toRem(13px);
 
-        @media only screen and (max-width: toRem(590px)){
+        @media only screen and (max-width: toRem(590px)) {
             flex-direction: column;
             gap: toRem(10px);
         }
@@ -35,10 +35,14 @@
                 width: toRem(20px);
                 height: auto;
 
-                &:nth-child(2){
+                &:nth-child(2) {
                     cursor: pointer;
                 }
             }
         }
     }
+}
+
+.footer--border {
+    border-top: none;
 }
