--- a/src/styles/components/Contact/contact.scss
+++ b/src/styles/components/Contact/contact.scss
@@ -1,9 +1,9 @@
 .container__contact {
     height: 100vh;
 
-    // @media only screen and (max-width: toRem(770px)) {
-    //     height: 100%;
-    // }
+    @media only screen and (max-width: toRem(770px)) {
+        height: 100%;
+    }
 }
 
 .contact {
@@ -14,6 +14,10 @@
     align-items: center;
     justify-content: center;
     background-color: $bg-light-color;
+
+    @media only screen and (max-width: toRem(770px)) {
+        height: 100%;
+    }
 
     &__hdl {
         background-color: $secondary-color;
@@ -34,32 +38,41 @@
         justify-content: center;
         // margin-top: toRem(100px);
         // margin-bottom: toRem(100px);
-        align-items: center;
+        // align-items: center;
 
     }
 
     &__box {
-        padding: toRem(100px);
+        // padding: toRem(100px);
         border-radius: toRem(5px);
         background-color: $bg-light-color;
         width: 80%;
         max-width: toRem(800px);
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         gap: toRem(20px);
         color: $hdl-color;
+        height: 100%;
 
-        @media only screen and (max-width: toRem(600px)) {
-            padding: toRem(70px);
+        @media only screen and (min-width: toRem(576px)) and (max-width: toRem(960px)) {
+            justify-content: start;
+            padding: toRem(160px) toRem(20px);
+            height: 100vh;
+        }
+        @media only screen and (max-width: toRem(576px)) {
+            height: 100vh;
+            justify-content: start;
+            padding: toRem(90px) toRem(20px);
             width: 90%;
         }
 
-        @media only screen and (max-width: toRem(450px)) {
-            padding: toRem(50px) toRem(20px);
-            width: 95%;
-        }
+        // @media only screen and (max-width: toRem(450px)) {
+        //     // padding: toRem(110px) toRem(20px);
+        //     padding-inline: toRem(20px);
+        //     width: 95%;
+        // }
     }
 
     &__name {
