--- a/src/styles/components/Home/about.scss
+++ b/src/styles/components/Home/about.scss
@@ -62,6 +62,8 @@
                 .about__img {
                     width: 100%;
                     height: auto;
+                    max-height: toRem(300px);
+                    padding-bottom: toRem(15px);
                 }
 
             }
