--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './settings/reset.scss';
 @import './settings/variables.scss';
 @import './settings/utils.scss';
+@import './settings/fonts.scss';
 @import './components/navbar.scss';
 @import './components/footer.scss';
 @import './components/home/hero.scss';
@@ -15,33 +16,41 @@
 
 html,
 body {
-    font-size: toRem($base-font-size);
-    width: 100%;
-    margin: 0 auto;
-    font-family: "Open Sans", sans-serif;
+  font-size: toRem($base-font-size);
+  width: 100%;
+  margin: 0 auto;
+  font-family: "Open Sans", sans-serif;
 }
 
-  body::before {
-    content: url(../assets/background.webp), url(../assets/image1.webp), url(../assets/image2.webp), url(../assets/image1.webp);
-    position: absolute;
-    top: -9999rem;
-    left: -9999rem;
-    opacity: 0;
-  }
+body::before {
+  background-image: url(../assets/background.webp);
+  position: absolute;
+  top: -9999rem;
+  left: -9999rem;
+  opacity: 0;
+}
+
+body::after {
+  background-image: url(../assets/image1.webp), url(../assets/image2.webp), url(../assets/image1.webp);
+  position: absolute;
+  top: -9999rem;
+  left: -9999rem;
+  opacity: 0;
+}
 
 .container {
-    width: 100%;
-    max-width: toRem(1700px);
-    margin: 0 auto;
-    background-color: lightgray;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    // align-items: center;
+  width: 100%;
+  max-width: toRem(1700px);
+  margin: 0 auto;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: center;
 
-    @media only screen and (min-width: toRem(1700px)) {
-        border-right: 1px solid lightgray;
-        border-left: 1px solid lightgray;
-        box-shadow: 2px 2px 10px 7px lightgray;
-    }
+  @media only screen and (min-width: toRem(1700px)) {
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    box-shadow: 2px 2px 10px 7px lightgray;
+  }
 }
