--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,8 +18,9 @@ html,
 body {
   font-size: toRem($base-font-size);
   width: 100%;
+  height: 100%;
   margin: 0 auto;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body::before {
@@ -40,13 +41,10 @@ body::after {
 
 .container {
   width: 100%;
+  height: 100%;
   max-width: toRem(1700px);
   margin: 0 auto;
   background-color: lightgray;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  // align-items: center;
 
   @media only screen and (min-width: toRem(1700px)) {
     border-right: 1px solid lightgray;
